# nixm

./: .gitignore  CHANGELOG.md  LICENSE  jrit.toml  mise.toml  package.json
nixm-backend/: .env_example  Cargo.toml  nixm.db
nixm-backend-webhook/: .env_example  Cargo.toml  main.py  pyproject.toml
nixm-backend-webhook/src/: main.rs
nixm-backend/.sqlx/: query-09e26aa350bb7287cc26c0322836d62c2051638d104957eb187bc93505c39953.json  query-1a6c14591084d9472488c2fc449f8bead0d4bd22027b18874a381c24997d1108.json  query-39776ba6873108faae033a59752d97ced4483096b1d39868ed2488ceb9920d63.json  query-4c1b5ffb7225be7e5c5f332dd90b370f585e680ca28afe019b662d10f87ee9fe.json  query-6804776813ecc999b6eb0a7a15180bb83baf879a60b99327f78b3d778df324d7.json  query-6c845c4cf121d1cb7bdc1b4ac8adc92dd7d3dd7a846bc7b08b7daa00ba04f738.json  query-776fa189301c29468d13015111170f36a032d0945633455141d882a6e0a6dfa6.json  query-806490f194bff5087fb8fe51b40a7af38470d198f48ca4d4e4cfddd357c865f9.json  query-91abb985d2ea7d17b9316d91ed4548e39e688d9007ffb32afad6843877c31dd9.json  query-ac28535b6c8eaa95ae8ea6096ec135245c5c6c0fd98eab09dbbeb6409313f5f1.json  query-b3a4d4f1fde3aa521d0bbfaafd7e28af1ad76548f5afde4e74c3714b882be664.json  query-ba602b9519ccd3a6c83de6cb5b6d3bc4016f2aea146e61269c5c5ff3ab52edba.json  query-bd42d53a4ef9d3cda41959172860f0d5f9a4184fad83ecd4ebb1ea54ce86ee7d.json  query-c2f22be0ff702be6bece2977f4302f04095baea24f67732df0090f80be0f1f0b.json  query-cbd951fc8ae2fdcb2aa7ae0a8511281592f7295ef5761b615949f541da70518b.json  query-e0f67f1119fa1642b9a2e6a54133a812089b26ace7b774f8ccb9a86b6d02ae08.json  query-e58aa311cbd2a4ce2dd60919ca31b88c9456a2268e94c3aff9c9f4b9c8206c0c.json  query-e957d0d1b9d0323dcc01962505854bb5b8356878d6507c45567b1ef5de8d679c.json  query-ea4f666fb757b9ec789d3e458a8b54d10f207bbeffc74e93f9b0c6e1a100d598.json  query-f7f9e8086624c9c2b88bc52b4f1ecde8e06a2213053d1f7f7a53081713fcdaf2.json  query-fd087ec7a88a12b4f2fdc68d0aaff5e5302ed5858ec90c40220ee6560d092a69.json
nixm-backend/migrations/: 20260322164355_initial.sql  20260407180052_refresh_tokens.sql  20260409061058_create_table_public_keys.sql  20260410074908_create_table_user_links.sql  20260417063922_create_table_messages.sql  (+2 more)
nixm-backend/src/: main.rs  (+3 more)
(+130 files in other folders)
