[package]
name = "nixm-backend-webhook"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nixm-backend-webhook"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

octocrab = "0.44"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

zip = "2"
anyhow = "1"