[package]
name = "nixm-backend"
version = "0.1.6"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
axum-extra = { version = "0.10", features = ["cookie"] }
nanoid = "0.4"
bcrypt = "0.15"        # хэширование паролей
jsonwebtoken = "9"     # JWT
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
rmp-serde = "1"
base64 = "0.22.1"